--- a/css/bear.css
+++ b/css/bear.css
@@ -3,10 +3,19 @@ html {
 }
 
 #bear {
-  position: absolute;
+  position: fixed;
   top: 100px;
   right: 0;
 }
 
+
+
 /* Write your solution here */
 
+@media only screen and (min-width: 1196px) {
+  #bear {
+    position: absolute;
+    top: 100px;
+    left: 800px;
+  }
+}
