--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -19,4 +19,21 @@ html {
 }
 
 /* Write your solution here */
+@media only screen and (max-width: 1090px) {
+  #dolphin {
+    position: absolute;
+    top: 100px;
+    right: 0;
+    transform: rotate(-90deg);
+  }
 
+}
+
+@media only screen and (max-width: 642px) {
+  #dolphin {
+    position: absolute;
+    top: 400px;
+    right: 0;
+    transform: rotate(360deg);
+  }
+}
