--- a/css/monkey.css
+++ b/css/monkey.css
@@ -9,4 +9,18 @@ html {
 }
 
 /* Write your solution here */
+@media only screen and (max-width: 1170px) {
+  #monkey {
+    position: absolute;
+    top: 30px;
+    right: 120px;
+  }
+}
 
+@media only screen and (max-width: 406px) {
+  #monkey {
+    position: absolute;
+    top: 550px;
+    right: 120px;
+  }
+}
